module(name = "llvm_toolchain_repro")

bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.8.3")
bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.4.1")

register_toolchains("@toolchains_llvm_bootstrapped//toolchain:all")
